hphp/test/quick/setm-method.php.expectf

Fatal error: Call to undefined method stdClass::foo() in %s/test/quick/setm-method.php on line 6
